Update Blog “2020-09-11-test-post”

--- a/src/pages/blog/2020-09-11-test-post.md
+++ b/src/pages/blog/2020-09-11-test-post.md
@@ -2,7 +2,7 @@
 templateKey: blog-post
 title: Test Post
 date: 2020-09-11T20:10:45.547Z
-description: "I'm Sean Delaney and you're listening to what got you there what
+description: I'm Sean Delaney and you're listening to what got you there what
   got you there is a must follow for entrepreneurs creatives high achievers and
   changemakers each week I sit down with some of the world's most influential
   people and focus on the journey behind their success we uncover the strategy
@@ -984,7 +984,7 @@ description: "I'm Sean Delaney and you're listening to what got you there what
   value in this the best way you can support the show is giving us a review
   rating it sharing it with your friends and also sharing on social I can't tell
   you how much I appreciate it looking forward to you guys listening to another
-  episode "
+  episode
 featuredpost: true
 featuredimage: /img/blog-index.jpg
 tags:
